<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Одесса Сегодня</string>
    <string name="odessa_today">Одесса сегодня</string>
    <string name="odessa_tomorrow">Одесса завтра</string>
    <string name="premiere">ПРЕМЬЕРА</string>
    <string name="premiere_date"><![CDATA[<b>премьера: </b>%1$s]]></string>
    <string name="select_date">Выбрать дату</string>
    <string name="today_marker">Сегодня,</string>
    <string name="selector_timetable">расписание</string>
    <string name="selector_cinemas">кинотеатры</string>
    <string name="selector_announcements">анонсы</string>
    <string name="film_duration">%1$d мин.</string>
    <string name="film_duration_unknown">продолжительность неизвестна</string>
    <string name="director">Режиссер:</string>
    <string name="actors">Актеры:</string>
    <string name="comments_count">%1$d отзывов</string>
    <string name="comments_count1">%1$d отзыв</string>
    <string name="comments_count2">%1$d отзыва</string>
    <string name="photos_count">%1$d фотографий</string>
    <string name="photos_count1">%1$d фотография</string>
    <string name="photos_count2">%1$d фотографии</string>
    <string name="comments_date_format">dd MMMM yyyy в HH:mm</string>
    <string name="error_loading_comments">Не удалось загрузить комментарии</string>
    <string name="error_loading_cinemas">Не удалось обновить список кинотеатров</string>
    <string name="error_loading_films">Не удалось обновить списк фильмов</string>
    <string name="error_loading_announcement_films">Не удалось обновить списк анонсов фильмов</string>
    <string name="error_loading_films_timetable">Не удалось обновить расписание фильмов</string>
    <string name="error_loading_places">Не удалось обновить список заведений</string>
    <string name="error_loading_events">Не удалось обновить список событий</string>
    <string name="cinema_info">О кинотеатре</string>
    <string name="map_not_found">Приложение-карта не найдено</string>
    <string name="format_unknown">\?</string>
    <string name="format_thirty_fife_mm">35 MM</string>
    <string name="format_two_d">2D</string>
    <string name="format_three_d">3D</string>
    <string name="format_imax_three_d">IMAX3D</string>
    <string name="format_imax">IMAX</string>
    <string name="format_five_d">5D</string>
    <string name="format_four_dx">4DX</string>
    <string name="share">Поделиться...</string>
    <string name="image_caching_progress">Идет сохранение изображения...</string>
    <string name="currency">грн.</string>
    <string name="action_comments">отзывы</string>
    <string name="action_share">...</string>
    <string name="action_no_tickets">нет билетов</string>
    <string name="action_tickets">билеты</string>
    <string name="action_gallery">галерея</string>
    <string name="action_map">на карте</string>
    <string name="events_list_date_format">dd MMMM в HH:mm</string>
    <string name="has_tickets">есть билеты</string>
    <string name="selector_spectacles">спектакли</string>
    <string name="selector_theatres">театры</string>
    <string name="selector_parties">вечеринки</string>
    <string name="selector_sport">спорт</string>
    <string name="selector_workshop">семинары, акции</string>
    <string name="selector_clubs">клубы</string>
    <string name="selector_exhibitions">выставки</string>
    <string name="selector_events">события</string>
    <string name="selector_museums">музеи</string>
    <string name="selector_concerts">концерты</string>
    <string name="selector_concert_halls">концертные залы</string>
    <string name="selector_places">места</string>
    <string name="full_description">Полное описание</string>
    <string name="timetable">Расписание</string>
    <string name="add_comment">Написать отзыв</string>
    <string name="comment_author_hint">Ваше имя</string>
    <string name="comment_text_hint">Текст отзыва</string>
    <string name="close">Закрыть</string>
    <string name="rate">Оценить</string>
    <string name="send">Отправить</string>
    <string name="fill_field">Заполните поле</string>
    <string name="date_not_selected_error">Выберите дату</string>
    <string name="x_from_y">%1$d из %2$d</string>
    <string name="propose_photo">Предложить фото</string>
    <string name="error_propose_photo_no_permission">Для отправки фото необходимо предоставить доступ к SD-карте</string>
    <string name="error_propose_photo_no_permission_strict">Для отправки фото необходимо предоставить доступ к SD-карте в системных настройках</string>
    <string name="error_share_no_permission">Для шаринга необходимо предоставить доступ к SD-карте</string>
    <string name="error_share_no_permission_strict">Для шаринга необходимо предоставить доступ к SD-карте в системных настройках</string>
    <string name="error_uploading_photo">Не удалось отправить фото</string>
    <string name="no_films_label">На выбранную дату нет фильмов</string>
    <string name="no_events_label">Нет событий</string>
    <string name="date_hint">Выберите дату события</string>
    <string name="tickets_count_hint">Количество билетов</string>
    <string name="name_hint">Имя</string>
    <string name="phone_hint">Телефон</string>
    <string name="order">Заказать</string>
    <string name="order_tickets_header">Заказ билетов</string>
    <string name="load_order_tickets_info_error">Не удалось загрузить информацию о билетах</string>
    <string name="order_tickets_error">Произошла ошибка при заказе билетов</string>
    <string name="filter_hint">Введите текст для поиска</string>

    <!--main menu-->
    <string name="menu_category_event">События</string>
    <string name="menu_category_place">Места</string>
    <string name="menu_films">Фильмы</string>
    <string name="menu_concert">Концерты</string>
    <string name="menu_party">Вечеринки</string>
    <string name="menu_spectacle">Спектакли</string>
    <string name="menu_exhibition">Выставки</string>
    <string name="menu_sport">Спорт</string>
    <string name="menu_workshop">Семинары, акции</string>
    <string name="menu_cinema">Кинотеатры</string>
    <string name="menu_theatre">Театры</string>
    <string name="menu_concert_hall">Концертные залы</string>
    <string name="menu_club">Клубы</string>
    <string name="menu_museum">Музеи</string>
    <string name="menu_gallery">Галереи</string>
    <string name="menu_zoo">Цирк, дельфинарий, зоопарк</string>
    <string name="menu_quest">Квесты</string>
    <string name="menu_restaurant">Рестораны</string>
    <string name="menu_cafe">Кафе</string>
    <string name="menu_pizza">Пиццерии</string>
    <string name="menu_sushi">Суши</string>
    <string name="menu_karaoke">Караоке-клубы</string>
    <string name="menu_skating_rink">Катки</string>
    <string name="menu_bowling">Боулинг</string>
    <string name="menu_billiard">Бильярдные залы</string>
    <string name="menu_sauna">Сауны</string>
    <string name="menu_bath">Бани</string>
    <string name="soon">скоро</string>

    <!--countries-->
    <string name="ua">Ukraine (Україна)</string>
    <string name="ru">Russia (Россия)</string>
    <string name="by">Belarus (Беларусь)</string>
    <string name="am">Armenia (Հայաստան)</string>
    <string name="az">Azerbaijan (Azərbaycan)</string>
    <string name="kz">Kazakhstan (Казахстан)</string>
    <string name="kg">Kyrgyzstan (Кыргызстан)</string>
    <string name="md">Moldova (Republica Moldova)</string>
    <string name="tj">Tajikistan</string>
    <string name="tm">Turkmenistan</string>
    <string name="uz">Uzbekistan (Oʻzbekiston)</string>
</resources>
