<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RadioGroup
            android:id="@+id/category_selector"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/category_selector_height"
            android:padding="@dimen/category_selector_padding"
            android:background="?attr/CategorySelectorBgColor"
            android:weightSum="3" >
            <RadioButton
                android:id="@+id/selector_timetable"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:checked="true"
                android:background="?attr/LeftSelectorBg"
                style="@style/CategorySelectorRadioButton"
                android:text="@string/selector_timetable" />
            <RadioButton
                android:id="@+id/selector_cinemas"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="?attr/MiddleSelectorBg"
                style="@style/CategorySelectorRadioButton"
                android:text="@string/selector_cinemas" />
            <RadioButton
                android:id="@+id/selector_announcements"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="?attr/RightSelectorBg"
                style="@style/CategorySelectorRadioButton"
                android:text="@string/selector_announcements" />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/category_selector_divider_height"
            android:background="?attr/CategorySelectorDividerColor" />
        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/calendar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>