<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/comment_author"
            style="@style/TodayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_comment_vertical_margin"
            android:layout_marginLeft="@dimen/add_comment_horizontal_padding"
            android:layout_marginRight="@dimen/add_comment_horizontal_padding"
            android:hint="@string/comment_author_hint"
            android:textColorHint="?attr/AddCommentHintTextColor"
            android:textColor="?attr/AddCommentTextColor"
            android:textSize="@dimen/add_comment_text_size"
            android:singleLine="true"
            android:maxLength="100" />
        <EditText
            android:id="@+id/comment_text"
            style="@style/TodayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_comment_vertical_margin"
            android:layout_marginLeft="@dimen/add_comment_horizontal_padding"
            android:layout_marginRight="@dimen/add_comment_horizontal_padding"
            android:gravity="top|left"
            android:maxLength="1000"
            android:inputType="textMultiLine"
            android:hint="@string/comment_text_hint"
            android:textColorHint="?attr/AddCommentHintTextColor"
            android:textColor="?attr/AddCommentTextColor"
            android:textSize="@dimen/add_comment_text_size"/>
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:id="@+id/rate_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/rate_label_top_margin"
            android:textColor="@color/rate_label_text_color"
            android:textSize="@dimen/rate_label_text_size"
            android:text="@string/rate"
            app:fontAsset="fonts/helveticaneuecyr-roman.ttf"/>
        <RadioGroup
            android:id="@+id/rate"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_marginLeft="@dimen/comment_rate_horizontal_margin"
            android:layout_marginRight="@dimen/comment_rate_horizontal_margin"
            android:layout_marginTop="@dimen/comment_rate_top_margin"
            android:layout_marginBottom="@dimen/comment_rate_bottom_margin">
            <RadioButton
                android:id="@+id/rating1"
                style="@style/CommentRatingRadioButton"
                android:text="1"/>
            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/rating2"
                style="@style/CommentRatingRadioButton"
                android:text="2"/>
            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/rating3"
                style="@style/CommentRatingRadioButton"
                android:text="3"/>
            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/rating4"
                style="@style/CommentRatingRadioButton"
                android:text="4"/>
            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/rating5"
                style="@style/CommentRatingRadioButton"
                android:text="5"/>
        </RadioGroup>
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:id="@+id/send_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="0dip"
            android:layout_marginLeft="@dimen/send_comment_button_horizontal_margin"
            android:layout_marginRight="@dimen/send_comment_button_horizontal_margin"
            android:layout_marginTop="@dimen/send_comment_button_vertical_margin"
            android:layout_marginBottom="@dimen/send_comment_button_vertical_margin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/gradient_button_text_size"
            app:fontAsset="fonts/helveticaneuecyr-bold.ttf"
            android:background="@drawable/gradient_button_bg"
            android:text="@string/send"
            android:clickable="true"/>
    </LinearLayout>
</ScrollView>