<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/event_details_padding">
        <com.kvest.odessatoday.ui.widget.RoundNetworkImageView
            android:id="@+id/event_poster"
            android:layout_width="@dimen/event_details_poster_width"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/image_corner_radius"
            android:layout_marginRight="@dimen/event_details_poster_margin_right"/>
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/event_poster"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/event_details_name_text_size"
            android:textColor="?attr/EventDetailsNameTextColor"
            app:fontAsset="fonts/helveticaneuecyr-roman.ttf"/>
        <RatingBar
            android:id="@+id/event_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/event_poster"
            android:layout_below="@id/event_name"
            android:numStars="5"
            android:stepSize="0.1"
            android:layout_marginTop="@dimen/event_details_ratingbar_vertical_margin"
            android:layout_marginBottom="@dimen/event_details_ratingbar_vertical_margin"
            style="@style/RatingBarTheme"
            android:isIndicator="true"/>
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:id="@+id/comments_count"
            style="@style/CommentsCountLabel"
            app:fontAsset="fonts/helveticaneuecyr-bold.ttf"
            android:layout_toRightOf="@id/event_rating"
            android:layout_below="@id/event_name"
            android:layout_marginTop="@dimen/event_details_comments_count_margin_top"
            android:layout_marginLeft="@dimen/event_details_comments_count_margin_left"/>
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:id="@+id/min_max_prices"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/event_poster"
            android:layout_below="@id/event_rating"
            android:textSize="@dimen/min_max_prices_text_size"
            android:textColor="@color/min_max_prices_text_color"
            app:fontAsset="fonts/helveticaneuecyr-roman.ttf"
            android:drawableLeft="@drawable/ic_cash"
            android:drawablePadding="@dimen/min_max_prices_icon_padding"/>
    </RelativeLayout>

    <include layout="@layout/video_and_images_container_layout"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="?attr/ActionsLayoutBg"
        android:paddingTop="@dimen/actions_layout_vertical_padding"
        android:paddingBottom="@dimen/actions_layout_vertical_padding"
        android:layout_marginBottom="@dimen/event_details_actions_margin_bottom">
        <include
            layout="@layout/action_comments"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1" />
        <include
            layout="@layout/action_tickets"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1" />
        <include
            layout="@layout/action_share"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/director_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/event_details_padding"
        android:layout_marginRight="@dimen/event_details_padding"
        android:layout_marginBottom="@dimen/event_details_director_padding_bottom">
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:layout_width="@dimen/event_details_role_name_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/event_details_description_text_size"
            android:textColor="?attr/EventDetailsRoleTitleTextColor"
            app:fontAsset="fonts/helveticaneuecyr-bold.ttf"
            android:text="@string/director" />
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:id="@+id/director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/event_details_description_text_size"
            android:textColor="@color/event_details_role_text_color"
            app:fontAsset="fonts/helveticaneuecyr-roman.ttf"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/actors_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/event_details_padding"
        android:layout_marginRight="@dimen/event_details_padding"
        android:layout_marginBottom="@dimen/event_details_actors_padding_bottom">
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:layout_width="@dimen/event_details_role_name_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/event_details_description_text_size"
            android:textColor="?attr/EventDetailsRoleTitleTextColor"
            app:fontAsset="fonts/helveticaneuecyr-bold.ttf"
            android:text="@string/actors"/>
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:id="@+id/actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/event_details_description_text_size"
            android:textColor="@color/event_details_role_text_color"
            app:fontAsset="fonts/helveticaneuecyr-roman.ttf"/>
    </LinearLayout>
    <com.kvest.odessatoday.ui.widget.FontTextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/event_details_padding"
        android:layout_marginRight="@dimen/event_details_padding"
        android:layout_marginBottom="@dimen/event_details_description_padding_bottom"
        android:textSize="@dimen/event_details_description_text_size"
        android:textColor="?attr/EventDetailsDescriptionTextColor"
        app:fontAsset="fonts/helveticaneuecyr-roman.ttf"
        android:autoLink="all"
        android:linksClickable="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_details_divider_height"
        android:layout_marginLeft="@dimen/event_details_padding"
        android:layout_marginRight="@dimen/event_details_padding"
        android:background="?attr/EventDetailsDividerColor" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_details_timetable_label_height"
        android:paddingLeft="@dimen/event_details_padding"
        android:paddingRight="@dimen/event_details_padding">
        <com.kvest.odessatoday.ui.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:textSize="@dimen/event_details_timetable_label_text_size"
            android:textColor="?attr/EventDetailsTimetableTextColor"
            app:fontAsset="fonts/helveticaneuecyr-roman.ttf"
            android:text="@string/timetable"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:src="@drawable/ic_timetable"
            android:tint="?attr/EventDetailsTimetableIconColor"/>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_details_divider_height"
        android:layout_marginLeft="@dimen/event_details_padding"
        android:layout_marginRight="@dimen/event_details_padding"
        android:background="?attr/EventDetailsDividerColor" />
</LinearLayout>